# advent-of-code-2023

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile.bat  release.bat  run.bat
include/: day.h  day1.h  day2.h  parsing.h
inputs/: day3.txt
ocaml/: dune-project  ocaml.opam
ocaml/lib/: day1.ml  day2.ml  dune  helpers.ml
src/: day0.cpp  day1.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day2.cpp  day20.cpp  day21.cpp  day22.cpp  day23.cpp  day24.cpp  day25.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp  main.cpp  parsing.cpp
