(lang dune 3.8)

(name ocaml)

(generate_opam_files true)

(source
 (github Brochu/advent-of-code-2023))

(authors "Brochu")

(maintainers "Brochu")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name ocaml)
 (synopsis "OCaml implementation of AoC2023")
 (description "At first, I wanted to complete AoC2023 with C++, but now I am maybe want to try out OCaml for this challenge in order to get more comfortable with the language.")
 (depends ocaml dune)
 (tags
  (aoc adventofcode "Advent of Code" OCaml programming challenge)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
